implementacion de HATEOS en controladores