@@ -1,31 +1,28 @@
 package com.example.ventas.controller;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.doNothing;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-
-import java.util.List;
-import java.util.Optional;
-import java.util.Collections;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.hateoas.MediaTypes;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 
 import com.example.ventas.model.Producto;
 import com.example.ventas.service.ProductoService;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
-@ExtendWith(SpringExtension.class)
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
+
+import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.BDDMockito.given;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+
 @WebMvcTest(ProductoController.class)
 public class ProductoControllerTest {
 
@@ -35,25 +32,41 @@ public class ProductoControllerTest {
     @MockBean
     private ProductoService productoService;
 
-    @Test
-    public void testGetAllProductos() throws Exception {
-        List<Producto> productos = List.of(new Producto());
-        given(productoService.getAll()).willReturn(productos);
-    
-        mockMvc.perform(get("/producto"))
-            .andExpect(status().isOk())
-            .andExpect(content().contentType(MediaType.APPLICATION_JSON));
+     public void testGetAllProductos() throws Exception {
+        Producto producto = new Producto(/* ... inicializa tu producto con un ID ... */);
+        producto.setId(1L);  // Asegúrate de asignar un ID
+        List<Producto> allProductos = Arrays.asList(producto);
+
+        given(productoService.getAll()).willReturn(allProductos);
+
+        mockMvc.perform(get("/producto").accept(MediaTypes.HAL_JSON))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaTypes.HAL_JSON))
+                .andExpect(jsonPath("$._embedded.productoList", hasSize(1)))
+                .andExpect(jsonPath("$._embedded.productoList[0].id", is(producto.getId().intValue())));
     }
+
     @Test
     public void testGetById() throws Exception {
-    long productoId = 1L;
-    Producto producto = new Producto(); // Configura el producto como necesario
-    given(productoService.getById(productoId)).willReturn(producto);
+        Producto producto = new Producto(/* ... inicializa tu producto ... */);
+        producto.setId(1L); // Ejemplo de ID
 
-    mockMvc.perform(get("/producto/{id}", productoId))
-        .andExpect(status().isOk())
-        .andExpect(content().contentType(MediaType.APPLICATION_JSON));
+        given(productoService.getById(producto.getId())).willReturn(producto);
+
+        mockMvc.perform(get("/producto/{id}", producto.getId()).accept(MediaTypes.HAL_JSON))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaTypes.HAL_JSON))
+                .andExpect(jsonPath("$.id", is(producto.getId().intValue())))
+                .andExpect(jsonPath("$._links.self.href", is("http://localhost/producto/" + producto.getId())));
     }
+
     
-    
-}    
+
+    @Test
+    public void testDeleteById() throws Exception {
+        doNothing().when(productoService).deleteById(anyLong());
+
+        mockMvc.perform(delete("/producto/{id}", 1L))
+                .andExpect(status().isOk());
+    }
+}
